# 3-python-package-exercise-project-3

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: setup.py
src/pysong/: __main__.py  song.py
src/rock_paper_scissors_game/: __main__.py
src/rockpaperscissors/: __main__.py  cli.py  game.py
src/rockpaperscissors2333/: __main__.py  cli.py  game.py
tests/: test_cli.py  test_game.py
